--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -7,5 +7,9 @@
             android:icon="@drawable/ic_menu_add"
             android:title="@string/new_crime"
             app:showAsAction="ifRoom|withText"/>
+        <item
+            android:title="@string/show_subtitles"
+            android:id="@+id/show_subtitle"
+            app:showAsAction="ifRoom"/>
 
 </menu>
