--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -8,7 +8,7 @@
             android:title="@string/new_crime"
             app:showAsAction="ifRoom|withText"/>
         <item
-            android:title="@string/show_subtitles"
+            android:title="@string/show_subtitle"
             android:id="@+id/show_subtitle"
             app:showAsAction="ifRoom"/>
 
